Arduino     Anpassung der PWM     Überarbeitung der Logik     Anpassung des Pins des Relais     Ladestrom kann 20A betragen     Unnötige Variablen entfernt     Anpassung der Statuswerte     State-Callback verändert (alter Status wird nicht mehr benötigt)     Für die Temperaturmessung wurde die Zykluszahl auf 3 gestellt
Raspberry Pi
    Anpassung der Projektdatei

iOS
    Ladung für 3 Stunden hinzugefügt (20A)
    Man kann sich auch per Host bzw. IP verbinden
    Dateiinformationen wurden am Anfang jeder Datei gelöscht
    Die Ladung kann im State B C D gestartet werden
    Der maximale Ladestrom kann auf 20A gesetzt werden

Desktop
    Bei Änderung des PWM-Reglers wird auch die Spinbox übernommen
    Durch das Verlassen oder Aktualisieren der Spinbox wird die PWM übernommen
    Der maximale Ladestrom wurde auf 20A erhöht
    Die Ladung kann aus dem Status B C D gestartet werden

--- a/Client/Desktop/EVSE/evsewindow.ui
+++ b/Client/Desktop/EVSE/evsewindow.ui
@@ -73,13 +73,13 @@
               <string>Intervall: </string>
              </property>
              <property name="minimum">
-              <number>100</number>
+              <number>200</number>
              </property>
              <property name="maximum">
               <number>19999</number>
              </property>
              <property name="value">
-              <number>100</number>
+              <number>200</number>
              </property>
             </widget>
            </item>
@@ -139,7 +139,7 @@
               <string>Stromstärke:</string>
              </property>
              <property name="minimum">
-              <number>5</number>
+              <number>6</number>
              </property>
              <property name="maximum">
               <number>20</number>
@@ -627,6 +627,54 @@
     <hint type="destinationlabel">
      <x>921</x>
      <y>703</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmSpinBox</sender>
+   <signal>editingFinished()</signal>
+   <receiver>pwmButton</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>54</x>
+     <y>395</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>517</x>
+     <y>396</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmDial</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>pwmSpinBox</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>142</x>
+     <y>407</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>69</x>
+     <y>386</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pwmSpinBox</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>pwmDial</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>55</x>
+     <y>385</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>125</x>
+     <y>373</y>
     </hint>
    </hints>
   </connection>
